# controller/influx.go
@@ -9,6 +9,7 @@ import (
 	"go-api-grapqhl/httputil"
 	"go-api-grapqhl/model"
 	"go-api-grapqhl/ruleengine"
+	"go-api-grapqhl/etlengine"
 	"net/http"
 
 	// "sort"
@@ -89,6 +90,7 @@ func (c *Controller) QueryRuleEngine(ctx *gin.Context) {
 			}
 		}
 	}
+	fmt.Println(newMap, "newMap")
 	if err != nil {
 		httputil.NewError(ctx, http.StatusNotFound, err)
 		return
@@ -102,6 +104,65 @@ func (c *Controller) QueryRuleEngine(ctx *gin.Context) {
 		Name:    res.Measurement,
 		Tags:    map[string]string{"id": res.Name},
 		Columns: []string{"time", "mean_value"},
+		Values:  values,
+	})
+}
+
+// Query godoc
+// @Summary      query influxDB
+// @Description  query influxDB
+// @Tags         influxdb
+// @Accept       json
+// @Produce      json
+// @Param        query  body      model.EtlEngine  true  "etl_engine"
+// @Success      200      {object}  model.NewRow{}
+// @Failure      400      {object}  httputil.HTTPError
+// @Failure      404      {object}  httputil.HTTPError
+// @Failure      500      {object}  httputil.HTTPError
+// @Router       /influxdb/etlengine [post]
+func (c *Controller) QueryEtlEngine(ctx *gin.Context) {
+	var res model.EtlEngine
+	if err := ctx.ShouldBindJSON(&res); err != nil {
+		httputil.NewError(ctx, http.StatusBadRequest, err)
+		return
+	}
+	if err := res.ValidationTime(); err != nil {
+		httputil.NewError(ctx, http.StatusBadRequest, err)
+		return
+	} else if err := res.ValidationName(); err != nil {
+		httputil.NewError(ctx, http.StatusBadRequest, err)
+		return
+	}
+	Fu, err := goparser.InputExpression(res.Expression)
+	mapping := map[string]string{}
+    json.Unmarshal([]byte(res.Mapping), &mapping)
+	constMap := map[string]float64{}
+	json.Unmarshal([]byte(res.ConstMap), &constMap)
+	newMap := map[string]int{}
+	for ke := range Fu.Mapping {
+		val, exists := mapping[ke]
+		if exists {
+			newMap[val] = Fu.Mapping[ke]
+		} else {
+			_, exi := constMap[ke]
+			if exi {
+				newMap[ke] = Fu.Mapping[ke]
+			}
+		}
+	}
+	if err != nil {
+		httputil.NewError(ctx, http.StatusNotFound, err)
+		return
+	}
+	_, ress, _ := etlengine.GenerateTimeseriesNew(res.Host, res.Port, res.Measurement, res.Database,
+		res.Name, res.Expression, res.StartTime, res.EndTime, mapping)
+	ff, _ := etlengine.GenerateTimeseriesMap(ress)
+	Fu.Mapping = newMap
+	values, columns := etlengine.GenerateNewTimeseries(Fu.CallFunctionByMap, ff, constMap)
+	ctx.JSON(http.StatusOK, model.NewRow{
+		Name:    res.Measurement,
+		Tags:    map[string]string{"id": res.Name},
+		Columns: columns,
 		Values:  values,
 	})
 }
